--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -524,6 +524,12 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="garena/Delta Force/Delta Force.html">
+        <img src="游戏LOGO/Delta.png" alt="" />
+        <p class="game-title">GARENA<br>DELTA FORCE</p>
+      </a>
+    </div>
   </section>
 
   <script>
