--- a/首页demo.html
+++ b/首页demo.html
@@ -551,14 +551,14 @@ html, body {
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="garena/Delta Force/Delta Force.html">
-        <img src="游戏LOGO/Delta.png" alt="" />
-        <p class="game-title">GARENA<br>DELTA FORCE</p>
+      <a href="国际服游戏/PUBG/PUBG.html">
+        <img src="游戏LOGO/PUBG.png" alt="" />
+        <p class="game-title">PUBG<br>MOBILE</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="garena/Delta Force/Delta Force.html">
+      <a href="国际服游戏/Pokemon Tcgp/Pokemon Tcg.html">
         <img src="游戏LOGO/tcg.png" alt="鸣潮" />
         <p class="game-title">POKEMON<br>TCG POCKET</p>
       </a>
@@ -574,21 +574,21 @@ html, body {
     <!-- 更多卡片放这里 继续放中国等等-->
 <div class="game-card" data-category="cn">
       <a href="王者荣耀.html">
-        <img src="tencent/王者荣耀logo.png" alt="鸣潮" />
+        <img src="游戏LOGO/王者.png" alt="鸣潮" />
         <p class="game-title">王者荣耀</p>
       </a>
     </div>
 
     <div class="game-card" data-category="cn">
       <a href="和平精英.html">
-        <img src="tencent/和平logo.png" alt="鸣潮" />
+        <img src="游戏LOGO/和平.png" alt="鸣潮" />
         <p class="game-title">和平精英</p>
       </a>
     </div>
 
     <div class="game-card" data-category="cn">
       <a href="金铲铲之战.html">
-        <img src="tencent/金铲铲logo.png" alt="鸣潮" />
+        <img src="游戏LOGO/金铲铲.png" alt="鸣潮" />
         <p class="game-title">金铲铲之战</p>
       </a>
     </div>
