--- a/a 字体方便copy.html
+++ b/a 字体方便copy.html
@@ -8,7 +8,11 @@
   </div>
   </section>
 
+  📌 充值需要提供 <strong style="color:#FFD700;"> 账号密码</strong>登入游戏完成充值<br>
+  🔐 如不放心，可选择充值后立即修改密码，或先咨询客服说明流程~<br>
+  📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 
+  
 
   <!-- ✅ 隐藏卡片：王者荣耀 -->
     <div class="game-card hidden" data-name="王者荣耀 honor of kings hok 腾讯游戏">
@@ -17,5 +21,6 @@
         <p class="game-title">王者荣耀</p>
       </a>
     </div>
+
 
 
