--- a/garena/Delta Force/Delta Force.html
+++ b/garena/Delta Force/Delta Force.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Garena CODM</title>
+  <title>Garena Delta Force</title>
   <style>
     body {
       margin: 0;
@@ -192,7 +192,7 @@
   <div class="currency-toggle" onclick="toggleCurrency()"><span id="currency-label">MYR</span></div>
 
   <div class="banner-container">
-    <img src="CODMBG.PNG" alt="HOKBG Banner">
+    <img src="BG.png" alt="HOKBG Banner">
   </div>
 <div class="logo-section">
   <img src="../../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
@@ -267,16 +267,16 @@ const cart = [];
 let cartOpen = false;
 
 const productList = [
-  { name: '230 + 23 CP', rm: 10.8, sgd: 3.6, img: 'cp0.png' },
-  { name: '460 + 69 CP', rm: 21, sgd: 7, img: 'cp1.png' },
-  { name: '690 + 104 CP', rm: 31, sgd: 10.5, img: 'cp2.png' },
-  { name: '1150 + 173 CP', rm: 50, sgd: 17, img: 'cp3.png' },
-  { name: '2300 + 460 CP', rm: 95, sgd: 32.5, img: 'cp4.png' },
-  { name: '4600 + 1840 CP', rm: 185, sgd: 62, img: 'cp4.png' },
-  { name: '6900 + 3680 CP', rm: 280, sgd: 93, img: 'cp5.png' },
-  { name: '9200 + 3680 CP', rm: 360, sgd: 120, img: 'cp5.png' },
-  { name: '13800 + 5520 CP', rm: 540, sgd: 174, img: 'cp6.png' },
-  { name: '18400 + 7360 CP', rm: 720, sgd: 232, img: 'cp6.png' }
+  { name: '60 COINS', rm: 4.5, sgd: 1.5, img: '1.png' },
+  { name: '320 COINS', rm: 21, sgd: 7, img: '1.png' },
+  { name: '460 COINS', rm: 28, sgd: 9, img: '2.png' },
+  { name: '750 COINS', rm: 39, sgd: 13, img: '2.png' },
+  { name: '1480 COINS', rm: 78, sgd: 26, img: '3.png' },
+  { name: '1980 COINS', rm: 98, sgd: 32, img: '3.png' },
+  { name: '3950 COINS', rm: 190, sgd: 63, img: '4.png' },
+  { name: '8100 COINS', rm: 380, sgd: 123, img: '5.png' },
+  { name: '16848 COINS', rm: 760, sgd: 245, img: '6.png' },
+  { name: '25272 COINS', rm: 1140, sgd: 367, img: '6.png' }
 ];// 用原始产品列表替换这里
 
 function renderProducts() {
