--- a/鸣潮.html
+++ b/鸣潮.html
@@ -197,7 +197,14 @@
 <div class="logo-section">
   <img src="logo.png" alt="Brilliant Gaming Logo" class="logo-img">
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
+  
 </p>
+<p style="font-size: 20px; color: #00ffff; line-height: 1.6; margin-top: 10px;">
+  📌 此游戏充值需要提供 <strong style="color:#FFD700;"> 账号密码 </strong> 登入游戏完成充值<br>
+  🔐 如不放心,充值后立即修改密码,先咨询客服说明流程<br>
+  📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
+</p>
+ 
   </div>
   </section>
   <div class="section-title"></div>
