--- a/首页demo.html
+++ b/首页demo.html
@@ -566,7 +566,7 @@ html, body {
 
     <div class="game-card" data-category="intl">
 <a href="更多国际游戏.html">
-  <img src="游戏LOGO/查看更多.png" alt="鸣潮" />
+  <img src="查看.png" alt="鸣潮" />
   <div class="game-title">查看更多游戏</div>
 </a>
 </div>
