--- a/绝区.html
+++ b/绝区.html
@@ -201,7 +201,8 @@
 <p style="font-size: 20px; color: #00ffff; line-height: 1.6; margin-top: 10px;">
   📌 此游戏充值需要提供 <strong style="color:#FFD700;"> 账号密码 </strong> 登入游戏完成充值<br>
   🔐 如不放心,充值后立即修改密码,先咨询客服说明流程<br>
-  📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
+  📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！<br>
+  🔔 打开购物车即可联系客服
 </p>
  
   </div>
