--- a/HOK入口.html
+++ b/HOK入口.html
@@ -187,12 +187,16 @@
     max-width: 600px;
   margin: 0 auto;
   text-align: left;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.8;
   color: #00ffff;
-  padding: 20px;
+  padding: 12px;
 }
-
+@media (max-width: 768px) {
+  .category-hint {
+    font-size: 200px;
+  }
+}
   </style>
 </head>
 <body>
