--- a/王者荣耀.html
+++ b/王者荣耀.html
@@ -192,7 +192,11 @@
   color: #00ffff;
   padding: 20px;
 }
-
+@media (max-width: 768px) {
+  .category-hint {
+    font-size: 14px;
+  }
+}
   </style>
 </head>
 <body>
