--- a/HOK入口.html
+++ b/HOK入口.html
@@ -190,7 +190,7 @@
   font-size: 20px;
   line-height: 1.8;
   color: #00ffff;
-  padding: 12px;
+  padding: 20px;
 }
 @media (max-width: 768px) {
   .category-hint {
@@ -212,8 +212,9 @@
   <div class="category-tabs">
     <button onclick="filterProductCategory(event, 'UID')">UID 免登入充值</button>
     <button onclick="filterProductCategory(event, 'LOG')">登入游戏充值</button>
-    <button onclick="filterProductCategory(event, 'song')">代送</button>
-    <button onclick="filterProductCategory(event, 'song')">代抽/其他</button>
+    <button onclick="filterProductCategory(event, 'SONG')">代送</button>
+    <button onclick="filterProductCategory(event, 'CHOU')">代抽</button>
+      <button onclick="filterProductCategory(event, 'QITA')">其他</button>
   </div>
   <div id="category-hint" class="category-hint"></div>
   <div class="section-title"></div>
@@ -279,17 +280,19 @@
     const hint = document.getElementById("category-hint");
     if (category === 'UID') {
       hint.innerHTML = `
-        📌 实际到账点券可能比页面显示更多~<br>
+        📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
         🎁 <strong style="color:#FFD700;">官方</strong> 有额外赠送机制，<span style="color:#ff0000;">首充的客户会得到更多</span><br>
+        ✅ 实际到账点券可能比页面显示更多~<br>
         📩 如需其他面额，欢迎 <u style="text-decoration-color:#00ffff;">随时私聊客服</u> 询问报价！<br>
         🔔 打开购物车即可联系客服
       `;
     } else if (category === 'LOG') {
       hint.innerHTML = `
         📌 QQ/微信用户，<strong style="color:#FFD700;">扫码登入</strong><br>
-        🎁 Email用户【提供 Email和验证码】
+        🎁 Email用户【提供 Email和验证码】<br>
         ✅ 价格实惠，适合大额充值！
       `;
+
     } else if (category === 'SONG') {
       hint.innerHTML = `
 1️⃣ 王者荣耀皮肤代送服务说明：<br>
@@ -298,13 +301,18 @@
 4️⃣<strong style="color:#FFD700;">100亲密度</strong> <strong style="color:#00ffff;">亲密度只需建立一次</strong>，后续再次代送无需重复操作<br>
 5️⃣ 请勿临时改名或删除好友，以免影响皮肤赠送流程
       `;
+
     } else if (category === 'CHOU') {
       hint.innerHTML = `
-具体详情请联系客服
-
+      ❗ 具体详情请联系客服
       `;
+      } else if (category === 'QITA') {
+      hint.innerHTML = `
+      ❗ 具体详情请联系客服
+      `;
+
     } else {
-      hint.innerHTML = '';
+     hint.innerHTML = 'QITA';
     }
 
     // 商品分类显示控制
