--- a/和平精英.html
+++ b/和平精英.html
@@ -169,7 +169,7 @@
       max-width: 1000px;
     }
     .category-tabs button {
-      background: none;
+      background:none;
       border: none;
       color: #ffffff ;
       font-weight: 500;
@@ -191,6 +191,11 @@
   line-height: 1.8;
   color: #00ffff;
   padding: 20px;
+}
+@media (max-width: 768px) {
+  .category-hint {
+    font-size: 14px;
+  }
 }
 
 
