--- a/国际服游戏/PUBG/PUBG.html
+++ b/国际服游戏/PUBG/PUBG.html
@@ -184,7 +184,20 @@
       font-weight: bold;
       cursor: pointer;
     }
-    
+    .responsive-note {
+  font-size: 20px;
+  color: #00ffff;
+  line-height: 1.6;
+  margin-top: 10px;
+}
+
+/* 手机字体稍小 */
+@media (max-width: 768px) {
+  .responsive-note {
+    font-size: 16px;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -199,7 +212,7 @@
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
   
-<p style="font-size: 20px; color: #00ffff; line-height: 1.6; margin-top: 10px;">
+<p class="responsive-note">
   📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
   📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 </p>
@@ -212,8 +225,7 @@
 
   <div id="cart-panel">
     <h3>🧾 我的购物车</h3>
-<p 
-style="font-size: 12px; color: #ffcc00; text-align: left; margin-top: 8px; line-height: 1.4;">
+<p style="font-size: 12px; color: #ffcc00; text-align: left; margin-top: 8px; line-height: 1.4;">
 📅价格每日更新，节假日可能会有小浮动<br>
 📌以上价格仅供参考，实际请以客服报价为准哦~<br>
 🎁有时候还会偷偷给你优惠，记得撩客服问一问 😏
