--- a/garena/Delta Force/Delta Force.html
+++ b/garena/Delta Force/Delta Force.html
@@ -185,6 +185,20 @@
       cursor: pointer;
     }
     
+        .responsive-note {
+  font-size: 20px;
+  color: #00ffff;
+  line-height: 1.6;
+  margin-top: 10px;
+}
+
+/* 手机字体稍小 */
+@media (max-width: 768px) {
+  .responsive-note {
+    font-size: 16px;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -199,7 +213,7 @@
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
   
-<p style="font-size: 20px; color: #00ffff; line-height: 1.6; margin-top: 10px;">
+<p class="responsive-note">
   📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
   📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 </p>
