--- a/garena/Aov/AOV.html
+++ b/garena/Aov/AOV.html
@@ -186,10 +186,13 @@
     }
     
         .responsive-note {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
   font-size: 20px;
+  line-height: 1.8;
   color: #00ffff;
-  line-height: 1.6;
-  margin-top: 10px;
+  padding: 20px;
 }
 
 /* 手机字体稍小 */
