--- a/国际服游戏/PUBG/PUBG.html
+++ b/国际服游戏/PUBG/PUBG.html
@@ -184,11 +184,15 @@
       font-weight: bold;
       cursor: pointer;
     }
+    
     .responsive-note {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
   font-size: 20px;
+  line-height: 1.8;
   color: #00ffff;
-  line-height: 1.6;
-  margin-top: 10px;
+  padding: 20px;
 }
 
 /* 手机字体稍小 */
