--- a/mlbb.html
+++ b/mlbb.html
@@ -217,7 +217,7 @@
 </p>
   
 <p class="responsive-note">
-  📌 只需 <strong style="color:#FFD700;">Player ID & Zone ID</strong> 即可完成充值<br>
+  📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
 📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 </p>
   </div>
