--- a/和平精英.html
+++ b/和平精英.html
@@ -212,8 +212,8 @@
   </div>
 
   <div class="category-tabs">
-    <button onclick="filterProductCategory(event, 'fast')">双系统快充</button>
-    <button onclick="filterProductCategory(event, 'slow')">双系统慢充</button>
+    <button onclick="filterProductCategory(event, 'fast')">双系统·快充</button>
+    <button onclick="filterProductCategory(event, 'slow')">双系统·慢充</button>
     <button onclick="filterProductCategory(event, 'song')">代送</button>
     <button onclick="filterProductCategory(event, 'CHOU')">代抽</button>
     <button onclick="filterProductCategory(event, 'QITA')">其他</button>
