--- a/国际服游戏/Pokemon Tcgp/Pokemon Tcg.html
+++ b/国际服游戏/Pokemon Tcgp/Pokemon Tcg.html
@@ -212,7 +212,7 @@
     <img src="BG.png" alt="HOKBG Banner">
   </div>
 <div class="logo-section">
-  <img src="logo.png" alt="Brilliant Gaming Logo" class="logo-img">
+  <img src="../../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
 <p class="responsive-note">
@@ -225,7 +225,7 @@
   </section>
   <div class="section-title"></div>
   <div class="price-grid" id="price-grid"></div>
-  <a href="index.html" class="back-button">← 返回首页</a>
+  <a href="../../index.html" class="back-button">← 返回首页</a>
   <div id="cart-toggle" onclick="toggleCart()">🛒 购物车 (<span id="cart-count">0</span>)</div>
 
   <div id="cart-panel">
