--- a/国际服游戏/Valorant/Valorant.html
+++ b/国际服游戏/Valorant/Valorant.html
@@ -217,8 +217,8 @@
   </div>
 
   <div class="category-tabs">
-    <button onclick="filterProductCategory(event, 'UID')"><p><span class="flag">🇲🇾</span> 马来西亚</p></button>
-    <button onclick="filterProductCategory(event, 'LOG')">登入游戏充值</button>
+    <button onclick="filterProductCategory(event, 'UID')"><p><span class="flag">🇲🇾</span>马来西亚</p></button>
+    <button onclick="filterProductCategory(event, 'LOG')"><p><span class="flag">🇸🇬</span>新加坡</p></button>
     <button onclick="filterProductCategory(event, 'SONG')">代送</button>
     <button onclick="filterProductCategory(event, 'CHOU')">代抽</button>
       <button onclick="filterProductCategory(event, 'QITA')">其他</button>
