--- a/国际服游戏/Valorant/Valorant.html
+++ b/国际服游戏/Valorant/Valorant.html
@@ -231,7 +231,7 @@
   <div class="section-title"></div>
   <div class="price-grid" id="price-grid"></div>
 
-  <a href="index.html" class="back-button">← 返回首页</a>
+  <a href="../../index.html" class="back-button">← 返回首页</a>
   <div id="cart-toggle" onclick="toggleCart()">🛒 购物车 (<span id="cart-count">0</span>)</div>
   <div id="cart-panel">
     <h3>🧾 我的购物车</h3>
