--- a/更多国际游戏 copy.html
+++ b/更多国际游戏 copy.html
@@ -415,7 +415,6 @@
 }
 
 .game-card img {
-  border-radius: 100px 100px 0 0;
   width: 100%;
   height: 160px;
   object-fit: contain; /* 不裁图 */
@@ -454,68 +453,67 @@ html, body {
   <button class="search-btn"><i class="fas fa-search"></i></button>
 </div>
 
-     <!-- 国际服热门卡片放这里 -->
   <section class="game-list">
     <div class="game-card" data-category="intl">
       <a href="HOK入口.html">
-        <img src="图片/HOK/HOKLOGO.png" alt="鸣潮" />
+        <img src="图片/游戏logo (3).png" alt="" />
         <p class="game-title">国际服王者<br>HONOR OF KINGS</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="原神.html">
-        <img src="图片/原神/原神LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/原神.png" alt="" />
         <p class="game-title">原神<br>GENSHIN IMPACT<br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="崩坏.html">
-        <img src="图片/崩坏/崩坏LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/崩坏.png" alt="" />
         <p class="game-title">崩坏：星穹铁道<br>HONKAI：STAR RAIL</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="绝区.html">
-        <img src="图片/绝区零/绝区logo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/绝区零.png" alt="" />
         <p class="game-title">绝区零<br>ZENLESS ZONE ZERO</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/鸣潮.png" alt="" />
         <p class="game-title">鸣潮<br>WUTHERING WAVES</p>
       </a>
     </div>
 
     <div class="game-card" data-category="intl">
       <a href="mlbb.html">
-        <img src="图片/MLBB/mlbblogo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/mlbb.png" alt="" />
         <p class="game-title">MOBILE LEGEND<br>BANG BANG</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/CODM/CODM.html">
-        <img src="garena/CODM/codm.png" alt="鸣潮" />
+        <img src="游戏LOGO/cod.png" alt="" />
         <p class="game-title">GARENA<br>CALL OF DUTY M</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="garena/Delta Force/Delta.png" alt="鸣潮" />
+        <img src="游戏LOGO/Delta.png" alt="" />
         <p class="game-title">GARENA<br>DELTA FORCE</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="图片/Pokemon TCG/宝可梦logo.png" alt="鸣潮" />
-        <p class="game-title">GARENA<br>DELTA FORCE</p>
+        <img src="游戏LOGO/tcg.png" alt="鸣潮" />
+        <p class="game-title">POKEMON<br>TCG POCKET</p>
       </a>
     </div>
 
@@ -526,9 +524,12 @@ html, body {
       </a>
     </div>
 
-
-    <!-- 更多卡片放这里 继续放中国等等-->
-
+    <div class="game-card" data-category="intl">
+      <a href="garena/Delta Force/Delta Force.html">
+        <img src="游戏LOGO/Delta.png" alt="" />
+        <p class="game-title">GARENA<br>DELTA FORCE</p>
+      </a>
+    </div>
   </section>
 
   <script>
