--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -525,9 +525,9 @@ html, body {
     </div>
 
     <div class="game-card" data-category="intl">
-      <a href="garena/Delta Force/Delta Force.html">
-        <img src="游戏LOGO/Delta.png" alt="" />
-        <p class="game-title">GARENA<br>DELTA FORCE</p>
+      <a href="国际服游戏/第五人格/第五人格.html">
+        <img src="国际服游戏/第五人格/logo.png" alt="" />
+        <p class="game-title">第五人格<br>IDENTITY V</p>
       </a>
     </div>
   </section>
