--- a/中国游戏/腾讯火影忍者/火影忍者.html
+++ b/中国游戏/腾讯火影忍者/火影忍者.html
@@ -448,7 +448,7 @@ window.onload = function () {
   </script>
 
   <footer style="text-align: center; padding: 16px; font-size: 12px; color: #ccc; background: rgba(255, 255, 255, 0.02); border-top: 1px solid rgba(255, 255, 255, 0); backdrop-filter: blur(4px); box-shadow: 0 -2px 6px rgba(0, 255, 255, 0); font-family: 'Segoe UI', sans-serif;">
-    © 2025 Brilliant Gaming Enterprise. All rights reserved.
+    © 2025 Brilliant Gaming Enterprise. All rights reserved.<BR><BR><BR><BR><BR><BR>
   </footer>
 </body>
 </html>
