--- a/中国游戏/腾讯火影忍者/火影忍者.html
+++ b/中国游戏/腾讯火影忍者/火影忍者.html
@@ -331,8 +331,8 @@
   { name: '3280 金币', rm: 212, sgd: 71, img: '14.png',category: 'JB' },
   { name: '6480 金币', rm: 496, sgd: 165, img: '15.png',category: 'JB' },
 
-  { name: '25￥ 忍法帖', rm: 19, sgd: 6.5, img: '25￥.png',category: 'QITA' },
-  { name: '198￥ 忍法帖', rm: 132, sgd: 44, img: '198￥.png',category: 'QITA' },
+  { name: '25￥ 忍法帖', rm: 19, sgd: 6.5, img: '888.png',category: 'QITA' },
+  { name: '198￥ 忍法帖', rm: 132, sgd: 44, img: '999.png',category: 'QITA' },
   { name: '忍具修行卡', rm: 410, sgd: 136, img: '忍者修行卡.png',category: 'QITA' },
 
     ];
